adding images and styles for 1st section

--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <title>Alura+</title>
 </head>
 <body>
+    <section class="container principal">
     <h1>Com a Combo+, você pode aproveitar o Alura+ e o Alura Língua por um preço único.</h1>
+    <img alt="combo Alura+" src="img/Combo.png" />
+    </section>
 </body>
 </html>
