--- a/index.html
+++ b/index.html
@@ -1,16 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./styles.css" />
     <title>Alura+</title>
-</head>
-<body>
+  </head>
+  <body>
     <section class="container principal">
-    <h1>Com a Combo+, você pode aproveitar o Alura+ e o Alura Língua por um preço único.</h1>
-    <img alt="combo Alura+" src="img/Combo.png" />
+      <div>
+        <h1 class="container__titulo">
+          Com a Combo+, você pode aproveitar o Alura+ e o Alura Língua por um
+          preço único.
+        </h1>
+        <img alt="combo Alura+" src="img/Combo.png" />
+        <a class="container__botao" href="www.alura.com.br"
+          >Assine por 12x de 120,00*</a
+        >
+        <a class="container__botao botao_secundario" href="www.alura.com.br"
+          >Assinar somente o Alura+</a
+        >
+        <p class="container__aviso">O preço pode variar caso a assinatura seja feita em outros planos.</p>
+      </div>
     </section>
-</body>
+  </body>
 </html>
