--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
   </head>
   <body>
     <section class="container principal">
-      <div>
+      <div class="container__caixa">
         <h1 class="container__titulo">
           Com a Combo+, você pode aproveitar o Alura+ e o Alura Língua por um
           preço único.
         </h1>
-        <img alt="combo Alura+" src="img/Combo.png" />
+        <img class="container__imagem" alt="combo Alura+" src="img/Combo.png" />
         <a class="container__botao" href="www.alura.com.br"
           >Assine por 12x de 120,00*</a
         >
