--- a/index.html
+++ b/index.html
@@ -24,5 +24,13 @@
         <p class="container__aviso">O preço pode variar caso a assinatura seja feita em outros planos.</p>
       </div>
     </section>
+    <section class="container secundario">
+        <img class="secundario__imagem" src="./img/Plataformas.png" alt="imagem" />
+        <div class="container__descricao">
+            <h2 class="descricao__titulo">Assista do seu jeito:</h2>
+            <p class="descricao__texto">Na TV, Tablet ou Celular.</p>
+        </div>
+
+    </section>
   </body>
 </html>
