--- a/index.html
+++ b/index.html
@@ -21,16 +21,63 @@
         <a class="container__botao botao_secundario" href="www.alura.com.br"
           >Assinar somente o Alura+</a
         >
-        <p class="container__aviso">O preço pode variar caso a assinatura seja feita em outros planos.</p>
+        <p class="container__aviso">
+          O preço pode variar caso a assinatura seja feita em outros planos.
+        </p>
       </div>
     </section>
     <section class="container secundario">
-        <img class="secundario__imagem" src="./img/Plataformas.png" alt="imagem" />
-        <div class="container__descricao">
-            <h2 class="descricao__titulo">Assista do seu jeito:</h2>
-            <p class="descricao__texto">Na TV, Tablet ou Celular.</p>
-        </div>
-
+      <img
+        class="secundario__imagem"
+        src="./img/Plataformas.png"
+        alt="imagem"
+      />
+      <div class="container__descricao">
+        <h2 class="descricao__titulo">Assista do seu jeito:</h2>
+        <p class="descricao__texto">Na TV, Tablet ou Celular.</p>
+      </div>
+    </section>
+    <section class="container secundario">
+      <div class="container__descricao">
+        <p class="descricao__texto">
+          Só o Combo+ oferece Alura Plus e Alura Língua juntos para você ter
+          acesso a cursos de diversas áreas de tecnologia e aprender ou espanhol
+          onde e como quiser.
+        </p>
+        <a class="container__botao secundario__botao" href="www.alura.com.br"
+          >Assinar o Combo+</a
+        >
+      </div>
+      <img class="secundario__imagem" src="./img/Telas.png" alt="imagem" />
+    </section>
+    <section class="container secundario">
+      <div class="container__descricao">
+        <p class="descricao__texto descricao__titulo">Baixe seus cursos</p>
+        <p class="descricao__texto">
+          Faça o download e assista seus cursos offline de onde você estiver
+        </p>
+        <a class="container__botao secundario__botao" href="www.alura.com.br"
+          >Assine agora</a
+        >
+      </div>
+      <img class="secundario__imagem" src="./img/Notebook.png" alt="imagem" />
+    </section>
+    <section class="dispositivos">
+      <h2 class="dispositivos__titulo">Disponivel nos seus dispositivos favoritos</h2>
+      <ul class="dispositivos__lista">
+        <li>
+          <img  src="./img/tv.png" alt="imagem" />
+          <h3 class="lista__item">Televisão</h3>
+        </li>
+        <li>
+          <img  src="./img/computador.png" alt="imagem" />
+          <h3 class="lista__item">Computador</h3>
+        </li>
+        <li>
+          <img  src="./img/celular.png" alt="imagem" />
+          <h3 class="lista__item">Celular</h3>
+        </li>
+      </ul>
     </section>
   </body>
 </html>
