--- a/index.html
+++ b/index.html
@@ -63,21 +63,51 @@
       <img class="secundario__imagem" src="./img/Notebook.png" alt="imagem" />
     </section>
     <section class="dispositivos">
-      <h2 class="dispositivos__titulo">Disponivel nos seus dispositivos favoritos</h2>
+      <h2 class="dispositivos__titulo">
+        Disponivel nos seus dispositivos favoritos
+      </h2>
       <ul class="dispositivos__lista">
         <li>
-          <img  src="./img/tv.png" alt="imagem" />
+          <img src="./img/tv.png" alt="imagem" />
           <h3 class="lista__item">Televisão</h3>
         </li>
         <li>
-          <img  src="./img/computador.png" alt="imagem" />
+          <img src="./img/computador.png" alt="imagem" />
           <h3 class="lista__item">Computador</h3>
         </li>
         <li>
-          <img  src="./img/celular.png" alt="imagem" />
+          <img src="./img/celular.png" alt="imagem" />
           <h3 class="lista__item">Celular</h3>
         </li>
       </ul>
     </section>
+    <footer class="rodape">
+      <img class="rodape__logo" src="./img/Logo.png" alt="logo" />
+      <ul class="rodape__lista">
+        <li class="lista__link">
+          <a href="#">Idioma</a>
+        </li>
+        <li class="lista__link">
+          <a href="#">Dispositivos compativeis</a>
+        </li>
+        <li class="lista__link">
+          <a href="#">Contrato de assinatura</a>
+        </li>
+        <li class="lista__link">
+          <a href="#">Politica de privacidade</a>
+        </li>
+        <li class="lista__link">
+          <a href="#">Proteção de dados no Brasil</a>
+        </li>
+        <li class="lista__link">
+          <a href="#">Anuncios personalizados</a>
+        </li>
+        <li class="lista__link">
+          <a href="#">Ajuda</a>
+        </li>
+      </ul>
+      <p class="rodape__texto">Alura todos os direitos reservados</p>
+      <p class="rodape__texto">Made by Liliane Soares in 2022</p>
+    </footer>
   </body>
 </html>
