--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./styles.css" />
     <title>Alura+</title>
+    <link rel="icon" type="image/x-icon" href="./img/Logo.png">
   </head>
   <body>
     <section class="container principal">
